# lazynotion

./: .gitignore  Makefile  keys.example.sh  pyproject.toml
configs/: books.yml  databases.yml  finances-template.yml  football-template.yml  log.yml  meals.yml  projects.yml  quran.yml  watchlist.yml  work-applicatioons.yml
lazynotion/: __init__.py  utils.py
lazynotion/core/: __init__.py  auth.py  blocks.py  database.py  display.py  logs.py  page.py  search.py
lazynotion/scritps/: create_databases.py
lazynotion/tests/: 01_page.py  02_database.py
scripts/: create_databases.py  football_template.py  list_databases.py  meals.py  quran.py  watchlist.py
src/lazynotion/: __init__.py  blocks.py  database.py  display.py  icons.py  logs.py  page.py  search.py  utils.py
tests/: 01_page.py  02_database.py
